@@ -20,6 +20,8 @@ package org.apache.solr.cloud.api.collections;
 import static org.apache.solr.common.params.CollectionAdminParams.ALIAS;
 import static org.apache.solr.common.params.CollectionAdminParams.COLL_CONF;
 import static org.apache.solr.common.params.CollectionParams.CollectionAction.ADDREPLICA;
+import static org.apache.solr.common.params.CollectionParams.CollectionAction.CREATE;
+import static org.apache.solr.common.params.CollectionParams.CollectionAction.DELETE;
 import static org.apache.solr.common.params.CommonAdminParams.ASYNC;
 import static org.apache.solr.common.params.CommonAdminParams.WAIT_FOR_FINAL_STATE;
 import static org.apache.solr.common.params.CommonParams.NAME;
@@ -30,13 +32,13 @@ import static org.apache.solr.handler.admin.ConfigSetsHandler.getSuffixedNameFor
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -101,11 +103,12 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
   }
 
   @Override
-  public void call(ClusterState clusterState, ZkNodeProps message, NamedList<Object> results)
+  public void call(AdminCmdContext adminCmdContext, ZkNodeProps message, NamedList<Object> results)
       throws Exception {
     if (ccc.getZkStateReader().aliasesManager != null) { // not a mock ZkStateReader
       ccc.getZkStateReader().aliasesManager.update();
     }
+    ClusterState clusterState = adminCmdContext.getClusterState();
     final Aliases aliases = ccc.getZkStateReader().getAliases();
     final String collectionName = message.getStr(NAME);
     final boolean waitForFinalState = message.getBool(WAIT_FOR_FINAL_STATE, false);
@@ -151,9 +154,6 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
     final String collectionPath = DocCollection.getCollectionPath(collectionName);
 
     try {
-
-      final String async = message.getStr(ASYNC);
-
       ZkStateReader zkStateReader = ccc.getZkStateReader();
       message.getProperties().put(COLL_CONF, configName);
 
@@ -173,6 +173,8 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
           collectionName,
           collectionParams,
           ccc.getCoreContainer().getConfigSetService());
+
+      ZkNodeProps m = cloneZkPropsWithOperation(message, CREATE);
 
       // Note that in code below there are two main execution paths: Overseer based cluster state
       // updates and distributed cluster state updates (look for isDistributedStateUpdate()
@@ -196,9 +198,8 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
 
         // TODO: Consider doing this for all collections, not just the PRS collections.
         ZkWriteCommand command =
-            new ClusterStateMutator(ccc.getSolrCloudManager())
-                .createCollection(clusterState, message);
-        byte[] data = Utils.toJSON(Collections.singletonMap(collectionName, command.collection));
+            new ClusterStateMutator(ccc.getSolrCloudManager()).createCollection(clusterState, m);
+        byte[] data = Utils.toJSON(Map.of(collectionName, command.collection));
         ccc.getZkStateReader().getZkClient().create(collectionPath, data, CreateMode.PERSISTENT);
         clusterState = clusterState.copyWith(collectionName, command.collection);
         newColl = command.collection;
@@ -210,11 +211,11 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
           ccc.getDistributedClusterStateUpdater()
               .doSingleStateUpdate(
                   DistributedClusterStateUpdater.MutatingCommand.ClusterCreateCollection,
-                  message,
+                  m,
                   ccc.getSolrCloudManager(),
                   ccc.getZkStateReader());
         } else {
-          ccc.offerStateUpdate(Utils.toJSON(message));
+          ccc.offerStateUpdate(m);
         }
 
         // wait for a while until we see the collection
@@ -245,7 +246,11 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
                 numReplicas);
       } catch (Assign.AssignmentException e) {
         ZkNodeProps deleteMessage = new ZkNodeProps("name", collectionName);
-        new DeleteCollectionCmd(ccc).call(clusterState, deleteMessage, results);
+        new DeleteCollectionCmd(ccc)
+            .call(
+                adminCmdContext.subRequestContext(DELETE).withClusterState(clusterState),
+                deleteMessage,
+                results);
         // unwrap the exception
         throw new SolrException(ErrorCode.BAD_REQUEST, e.getMessage(), e.getCause());
       }
@@ -256,7 +261,7 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
       }
 
       final ShardRequestTracker shardRequestTracker =
-          CollectionHandlingUtils.asyncRequestTracker(async, ccc);
+          CollectionHandlingUtils.asyncRequestTracker(adminCmdContext, ccc);
       if (log.isDebugEnabled()) {
         log.debug(
             formatString(
@@ -339,7 +344,7 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
           if (ccc.getDistributedClusterStateUpdater().isDistributedStateUpdate()) {
             scr.record(DistributedClusterStateUpdater.MutatingCommand.SliceAddReplica, props);
           } else {
-            ccc.offerStateUpdate(Utils.toJSON(props));
+            ccc.offerStateUpdate(props);
           }
         }
 
@@ -355,8 +360,8 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
         params.set(CoreAdminParams.NEW_COLLECTION, "true");
         params.set(CoreAdminParams.REPLICA_TYPE, replicaPosition.type.name());
 
-        if (async != null) {
-          String coreAdminAsyncId = async + Math.abs(System.nanoTime());
+        if (adminCmdContext.getAsyncId() != null) {
+          String coreAdminAsyncId = adminCmdContext.getAsyncId() + Math.abs(System.nanoTime());
           params.add(ASYNC, coreAdminAsyncId);
         }
         CollectionHandlingUtils.addPropertyParams(message, params);
@@ -368,9 +373,7 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
       // Update the state.json for PRS collection in a single operation
       if (isPRS) {
         byte[] data =
-            Utils.toJSON(
-                Collections.singletonMap(
-                    collectionName, clusterState.getCollection(collectionName)));
+            Utils.toJSON(Map.of(collectionName, clusterState.getCollection(collectionName)));
         zkStateReader.getZkClient().setData(collectionPath, data);
       }
 
@@ -406,11 +409,11 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
         ModifiableSolrParams params = e.getValue();
         String nodeName = nodeNames.get(e.getKey());
         params.set(CoreAdminParams.CORE_NODE_NAME, replicas.get(e.getKey()).getName());
-        shardRequestTracker.sendShardRequest(nodeName, params, shardHandler);
+        shardRequestTracker.sendShardRequest(
+            nodeName, replicas.get(e.getKey()).getCoreName(), params, shardHandler);
       }
 
-      shardRequestTracker.processResponses(
-          results, shardHandler, false, null, Collections.emptySet());
+      shardRequestTracker.processResponses(results, shardHandler, false, null, Set.of());
       boolean failure =
           results.get("failure") != null
               && ((SimpleOrderedMap<?>) results.get("failure")).size() > 0;
@@ -438,7 +441,8 @@ public class CreateCollectionCmd implements CollApiCmds.CollectionApiCommand {
         // Let's cleanup as we hit an exception
         // We shouldn't be passing 'results' here for the cleanup as the response would then contain
         // 'success' element, which may be interpreted by the user as a positive ack
-        CollectionHandlingUtils.cleanupCollection(collectionName, new NamedList<>(), ccc);
+        CollectionHandlingUtils.cleanupCollection(
+            adminCmdContext, collectionName, new NamedList<>(), ccc);
         log.info("Cleaned up artifacts for failed create collection for [{}]", collectionName);
         throw new SolrException(
             ErrorCode.BAD_REQUEST,
