@@ -22,7 +22,6 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -44,7 +43,7 @@ import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.logging.LogWatcherConfig;
 import org.apache.solr.search.CacheConfig;
-import org.apache.solr.servlet.SolrDispatchFilter;
+import org.apache.solr.servlet.CoreContainerProvider;
 import org.apache.solr.update.UpdateShardHandlerConfig;
 import org.apache.solr.util.ModuleUtils;
 import org.slf4j.Logger;
@@ -187,7 +186,7 @@ public class NodeConfig {
     this.solrProperties = solrProperties;
     this.backupRepositoryPlugins = backupRepositoryPlugins;
     this.metricsConfig = metricsConfig;
-    this.cachesConfig = cachesConfig == null ? Collections.emptyMap() : cachesConfig;
+    this.cachesConfig = cachesConfig == null ? Map.of() : cachesConfig;
     this.tracerConfig = tracerConfig;
     this.clusterPlugins = clusterPlugins;
     this.defaultZkHost = defaultZkHost;
@@ -295,7 +294,7 @@ public class NodeConfig {
    * @return path to install dir or null if solr.install.dir not set.
    */
   public static Path getSolrInstallDir() {
-    String prop = System.getProperty(SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+    String prop = System.getProperty(CoreContainerProvider.SOLR_INSTALL_DIR);
     if (prop == null || prop.isBlank()) {
       log.debug("solr.install.dir property not initialized.");
       return null;
@@ -452,7 +451,7 @@ public class NodeConfig {
     if (solrInstallDir == null) {
       log.warn(
           "Unable to add $SOLR_HOME/lib for shared lib since {} was not set.",
-          SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE);
+          CoreContainerProvider.SOLR_INSTALL_DIR);
     } else {
       // Always add $SOLR_TIP/lib to the shared resource loader
       libDirs.add(solrInstallDir.resolve("lib").toAbsolutePath().normalize().toString());
@@ -525,7 +524,7 @@ public class NodeConfig {
             "Unable to setup modules "
                 + moduleNames
                 + " because "
-                + SolrDispatchFilter.SOLR_INSTALL_DIR_ATTRIBUTE
+                + CoreContainerProvider.SOLR_INSTALL_DIR
                 + " was not set.");
       }
       return;
@@ -581,7 +580,7 @@ public class NodeConfig {
     private UpdateShardHandlerConfig updateShardHandlerConfig = UpdateShardHandlerConfig.DEFAULT;
     private String configSetServiceClass;
     private String coreAdminHandlerClass = DEFAULT_ADMINHANDLERCLASS;
-    private Map<String, String> coreAdminHandlerActions = Collections.emptyMap();
+    private Map<String, String> coreAdminHandlerActions = Map.of();
     private String collectionsAdminHandlerClass = DEFAULT_COLLECTIONSHANDLERCLASS;
     private String healthCheckHandlerClass = DEFAULT_HEALTHCHECKHANDLERCLASS;
     private String infoHandlerClass = DEFAULT_INFOHANDLERCLASS;
@@ -599,8 +598,8 @@ public class NodeConfig {
     private PluginInfo tracerConfig;
     private PluginInfo[] clusterPlugins;
     private String defaultZkHost;
-    private Set<Path> allowPaths = Collections.emptySet();
-    private List<String> allowUrls = Collections.emptyList();
+    private Set<Path> allowPaths = Set.of();
+    private List<String> allowUrls = List.of();
     private boolean hideStackTrace =
         !EnvUtils.getPropertyAsBool("solr.responses.stacktrace.enabled", true);
 
@@ -845,7 +844,7 @@ public class NodeConfig {
           hiddenSysProps = fromProps;
         }
       }
-      Set<String> hiddenSysPropSet = Collections.emptySet();
+      Set<String> hiddenSysPropSet = Set.of();
       if (hiddenSysProps != null) {
         hiddenSysPropSet =
             StrUtils.splitSmart(hiddenSysProps, ',').stream()
