@@ -741,7 +741,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
           expectedFieldName + " vs " + actualFieldName,
           expected.getFieldValue(expectedFieldName),
           normalize(wt, actual.getFirstValue(actualFieldName)));
-      return Collections.<String>singleton(actualFieldName);
+      return Set.of(actualFieldName);
     }
   }
 
@@ -787,7 +787,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
 
     @Override
     public Set<String> getSuppressedFields() {
-      return Collections.singleton(expectedFieldName);
+      return Set.of(expectedFieldName);
     }
   }
 
@@ -836,14 +836,14 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
           // validates based on `actual.getFirstValue(...)`, it causes issues. Here we know that our
           // raw values are only on single-valued fields, so we wrap it to work around
           // `getFirstValue` in parent class. The same logic applies to `expected` (below)
-          actual.setField(actualFieldName, Collections.singleton(v));
+          actual.setField(actualFieldName, Set.of(v));
         }
         try {
           Object parsedExpected =
               ObjectBuilder.fromJSON((String) expected.getFieldValue(expectedFieldName));
           if (parsedExpected instanceof Collection) {
             // see note above
-            parsedExpected = Collections.singleton(parsedExpected);
+            parsedExpected = Set.of(parsedExpected);
           }
           expected = expected.deepCopy(); // need to copy before modifying expected!
           expected.setField(expectedFieldName, parsedExpected);
@@ -974,7 +974,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
       }
       assertTrue(
           USAGE + " must be >= " + minValidDocId + ": " + value, minValidDocId <= (Integer) value);
-      return Collections.<String>singleton(resultKey);
+      return Set.of(resultKey);
     }
   }
 
@@ -1014,7 +1014,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
 
       // trivial sanity check
       assertFalse(USAGE + " => blank string", value.toString().trim().isEmpty());
-      return Collections.<String>singleton(resultKey);
+      return Set.of(resultKey);
     }
   }
 
@@ -1054,7 +1054,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
 
       // trivial sanity check
       assertFalse(USAGE + " => blank string", value.toString().trim().isEmpty());
-      return Collections.singleton(resultKey);
+      return Set.of(resultKey);
     }
   }
 
@@ -1105,7 +1105,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
       Object actualVal = normalize(wt, actual.getFirstValue(resultKey));
       assertNotNull(getFlParam() + " => no value in actual doc", actualVal);
       assertEquals(getFlParam(), expectedVal, actualVal);
-      return Collections.<String>singleton(resultKey);
+      return Set.of(resultKey);
     }
   }
 
@@ -1155,7 +1155,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
           "this validator only works on numeric fields: " + origVal, origVal instanceof Number);
 
       assertEquals(fl, 1.3F, normalize(wt, actual.getFirstValue(resultKey)));
-      return Collections.<String>singleton(resultKey);
+      return Set.of(resultKey);
     }
   }
 
@@ -1220,7 +1220,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
             ((subDocIdVal < compVal) && ((compVal - 2) <= subDocIdVal)));
       }
 
-      return Collections.<String>singleton(SUBQ_KEY);
+      return Set.of(SUBQ_KEY);
     }
 
     @Override
@@ -1321,12 +1321,12 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
         }
       }
       assertEquals(fl, orig, actual.getFirstValue(resultKey));
-      return Collections.<String>singleton(resultKey);
+      return Set.of(resultKey);
     }
 
     @Override
     public Set<String> getSuppressedFields() {
-      return Collections.singleton(fieldName);
+      return Set.of(fieldName);
     }
   }
 
@@ -1418,7 +1418,7 @@ public class TestRandomFlRTGCloud extends SolrCloudTestCase {
         final SolrDocument actual,
         final String wt) {
       assertNull(fl, actual.getFirstValue(fieldName));
-      return Collections.emptySet();
+      return Set.of();
     }
   }
 
